--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     padding: 1em;
+    border: none;
     border-radius: 200px;
     background-color: rgba(255, 255, 255, 0.5);
     user-select: none;
